<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profileMaker">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:elevation="2dp"
                android:background="@drawable/bg_header">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/createAccount"
                    android:textSize="40sp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_centerInParent="true"> </TextView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_card"
                android:layout_marginTop="140dp"
                android:layout_marginHorizontal="24dp"
                android:elevation="8dp"
                android:padding="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profileMaker"
                    android:textColor="#3EC6FF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"
                    android:textColor="#3EC6FF"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp">
                </TextView>

                <EditText
                    android:id="@+id/currentBalanceInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salaryInMonth"
                    android:textColor="#3EC6FF"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp">
                </TextView>

                <EditText
                    android:id="@+id/salaryInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/savingGoal"
                    android:textColor="#3EC6FF"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp">
                </TextView>

                <EditText
                    android:id="@+id/savingInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salaryDate"
                    android:textColor="#3EC6FF"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp">
                </TextView>

                <EditText
                    android:id="@+id/salaryDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2" />

                <Spinner
                    android:id="@+id/currencyPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/startButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:text="@string/start"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />


            </LinearLayout>

        </FrameLayout>




    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>