<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signin">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:elevation="2dp"
                android:background="@drawable/bg_header">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/createAccount"
                    android:textSize="40sp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_centerInParent="true"> </TextView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_card"
                android:layout_marginTop="140dp"
                android:layout_marginHorizontal="24dp"
                android:elevation="8dp"
                android:padding="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textColor="#3EC6FF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="#3EC6FF"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp">
                </TextView>

                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="text@text.com" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="#3EC6FF"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp">
                </TextView>

                <EditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enterPasswordAgain"
                    android:textColor="#3EC6FF"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp">
                </TextView>

                <EditText
                    android:id="@+id/repasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/SignupButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:text="@string/signup"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />




            </LinearLayout>

        </FrameLayout>




    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>