<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setting_layout"
    android:background="@drawable/bg_dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:padding="20dp"
            android:fontFamily="sans-serif-light" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card"
            android:layout_margin="10dp"
            app:cardCornerRadius="30dp"
            android:layout_gravity="center_vertical"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:gravity="center"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:padding="20dp" />

                <Spinner
                    android:id="@+id/languagePicker"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:background="@drawable/bg_spinner" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/saveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:background="@drawable/button"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_margin="20dp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card"
            android:layout_margin="10dp"
            app:cardCornerRadius="30dp"
            android:layout_gravity="center_vertical"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:gravity="center"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:padding="10dp" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/logoutButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:background="@drawable/button"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_margin="20dp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>